debathena-gdm-config (1.31) unstable; urgency=low

  * Only display the nologin-monitor window on startup if the file exists
    AND this is -cluster
  * Include a timestamp in the window

 -- Jonathan Reed <jdreed@mit.edu>  Thu, 04 Aug 2011 11:36:58 -0400

debathena-gdm-config (1.30) unstable; urgency=low

  * Display the nologin-monitor window if the file exists when we start up

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 20 Jul 2011 18:01:14 -0400

debathena-gdm-config (1.29) unstable; urgency=low

  * Applets really shouldn't attempt to steal focus (Trac: #812)
  * Ensure gdm's g-s-d dies (Trac: #979)

 -- Jonathan Reed <jdreed@mit.edu>  Tue, 19 Jul 2011 08:58:28 -0400

debathena-gdm-config (1.28) unstable; urgency=low

  * Ship our own athena-session and do logic in that
  * Make the implict dependencyies on gnome-session and python explicit

 -- Jonathan Reed <jdreed@mit.edu>  Mon, 27 Jun 2011 10:20:46 -0400

debathena-gdm-config (1.27.1) unstable; urgency=low

  * Don't fail in maintainer scripts, even if the Debian utilities are
    stupid

 -- Jonathan Reed <jdreed@mit.edu>  Thu, 23 Jun 2011 14:02:51 -0400

debathena-gdm-config (1.27) unstable; urgency=low

  * Add new Athena session (Trac #850)

 -- Jonathan Reed <jdreed@mit.edu>  Mon, 20 Jun 2011 10:15:07 -0400

debathena-gdm-config (1.26.1) unstable; urgency=low

  * Only request a reboot on upgrade, not the first install

 -- Jonathan Reed <jdreed@mit.edu>  Tue, 19 Apr 2011 13:05:28 -0400

debathena-gdm-config (1.26) unstable; urgency=low

  * Force a reboot to fix broken nologin-monitor

 -- Jonathan Reed <jdreed@mit.edu>  Tue, 19 Apr 2011 11:52:18 -0400

debathena-gdm-config (1.25) unstable; urgency=low

  * Applets shouldn't attempt to steal focus
  * Monitor the real file, not a symlink target
  * Make the window louder
  * Only run on cluster

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 02 Mar 2011 14:03:05 -0500

debathena-gdm-config (1.24) unstable; urgency=low
